crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_KH5V__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: KH5V/00
input: "\"1 inline\\ttab\"\n"
diagnostics:

cst:
YAML_STREAM@0..16
  YAML_DOCUMENT@0..16
    YAML_SCALAR@0..15 "\"1 inline\\ttab\""
    NEWLINE@15..16 "\n"
