crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_KH5V__01.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: KH5V/01
input: "\"2 inline\\\ttab\"\n"
diagnostics:

cst:
YAML_STREAM@0..16
  YAML_DOCUMENT@0..16
    YAML_SCALAR@0..15
      YAML_SCALAR_TEXT@0..15 "\"2 inline\\\ttab\""
    NEWLINE@15..16 "\n"
