crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_KH5V__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: KH5V/02
input: "\"3 inline\ttab\"\n"
diagnostics:

cst:
DOCUMENT@0..15
  YAML_METADATA_CONTENT@0..15
    YAML_STREAM@0..15
      YAML_DOCUMENT@0..15
        YAML_SCALAR@0..14 "\"3 inline\ttab\""
        NEWLINE@14..15 "\n"
